# kmymoney

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  config-kmymoney.h.cmake
kmymoney/alkimia/: CMakeLists.txt  alkvalue.cpp  alkvalue.h
kmymoney/alkimia/tests/: CMakeLists.txt  alkvalue-test.cpp  alkvalue-test.h
kmymoney/htmlrenderer/: CMakeLists.txt  config-htmlrenderer.h.in  kmymoneyhtmlrenderer.cpp  kmymoneyhtmlrenderer.h  kmymoneykdewebkit.cpp  kmymoneykdewebkit.h  kmymoneykhtml.cpp  kmymoneykhtml.h  kmymoneyqtwebengine.cpp  kmymoneyqtwebengine.h
kmymoney/payeeidentifier/ibanandbic/tests/: CMakeLists.txt  payeeidentifierwidgettest.cpp  payeeidentifierwidgettest.h
kmymoney/plugins/storage/interface/: CMakeLists.txt  enums.h  icallback.h  idialogpartopensave.cpp  idialogpartopensave.h  imessage.cpp  imessage.h  imessagebox.cpp  imessagebox.h  iplugin.cpp  iplugin.h  iquestioner.cpp  iquestioner.h  issuesprocessor.cpp  issuesprocessor.h  iurl.cpp  iurl.h  ivalidator.h  ui.cpp  ui.h  wallet.cpp  wallet.h
kmymoney/plugins/storage/interface/quick/: detailederror.qml  error.qml  information.qml  informationlist.qml  messagebox.cpp  messagebox.h  questionyesno.qml  resources.qrc  warning.qml
kmymoney/plugins/storage/interface/widget/: messagebox.cpp  messagebox.h
kmymoney/plugins/storage/manager/: CMakeLists.txt  cmakedefine.h.in  configuration.kcfg  kcm.cpp  kcm.desktop.in  kcm.h  plugin.cpp  plugin.h  plugin.json.in
kmymoney/plugins/storage/manager/frontend/: message.cpp  message.h  opensave.cpp  opensave.h  opensave_p.h  questioner.cpp  questioner.h
kmymoney/plugins/storage/manager/frontend/quick/: opensave.cpp  opensave.h  opensave.qml  resources.qrc
kmymoney/plugins/storage/manager/frontend/widget/: kcm.ui  opensave.cpp  opensave.h  opensave.ui
kmymoney/plugins/storage/sql/: CMakeLists.txt  cmakedefine.h.in  configuration.kcfg  kcm.cpp  kcm.desktop.in  kcm.h  plugin.cpp  plugin.h  plugin.json.in
kmymoney/plugins/storage/sql/backend/: backend.cpp  backend.h  converter.cpp  converter.h  mymoneydbdef.cpp  mymoneystoragesql.cpp  mymoneystoragesql.h  mymoneystoragesql_p.h  names.cpp  names.h  sqlhelper.cpp  sqlhelper.h  upgrader.cpp  upgrader.h  url.cpp  url.h
kmymoney/plugins/storage/sql/backend/tests/: CMakeLists.txt  comparator.cpp  comparator.h  mymoneydatabasemgr-test.cpp  storagesqlbackend-test.cpp  storagesqlbackend-test.h  storagesqlconverter-test.cpp  storagesqlconverter-test.h  storagesqlnames-test.cpp  storagesqlnames-test.h  storagesqlupgrader-test.cpp  storagesqlupgrader-test.h
kmymoney/plugins/storage/sql/frontend/: credentials.cpp  credentials.h  message.cpp  message.h  opensave.cpp  opensave.h  opensave_p.h  opensaveserver.cpp  opensaveserver.h  opensaveserver_p.h  questioner.cpp  questioner.h
kmymoney/plugins/storage/sql/frontend/quick/: credentials.cpp  credentials.h  credentials.qml  opensave.cpp  opensave.h  opensave.qml  opensaveserver.cpp  opensaveserver.h  opensaveserver.qml  resources.qrc
kmymoney/plugins/storage/sql/frontend/widget/: credentials.cpp  credentials.h  credentials.ui  kcm.ui  opensave.cpp  opensave.h  opensave.ui  opensaveserver.cpp  opensaveserver.h  opensaveserver.ui
kmymoney/plugins/storage/sql/interface/: ibackend.h
kmymoney/plugins/storage/sql/mysql/: backend.cpp  backend.h
kmymoney/plugins/storage/sql/postgresql/: backend.cpp  backend.h
kmymoney/plugins/storage/sql/sqlcipher/: backend.cpp  backend.h
kmymoney/plugins/storage/sql/sqlite/: backend.cpp  backend.h
kmymoney/plugins/storage/xml/: CMakeLists.txt  cmakedefine.h.in  configuration.kcfg  configuration.kcfgc  kcm.cpp  kcm.desktop.in  kcm.h  plugin.cpp  plugin.h  plugin.json.in
kmymoney/plugins/storage/xml/backend/: anonymizer.cpp  anonymizer.h  backend.cpp  backend.h  converter.cpp  converter.h  domhelper.cpp  domhelper.h  names.cpp  names.h  readerwriter.cpp  readerwriter.h  upgrader.cpp  upgrader.h  url.cpp  url.h
kmymoney/plugins/storage/xml/backend/tests/: CMakeLists.txt  comparator.cpp  comparator.h  mymoneyxmlcontenthandler-test.cpp  readerwriterhelper.cpp  readerwriterhelper.h  storagexmlbackend-test.cpp  storagexmlbackend-test.h  storagexmlconverter-test.cpp  storagexmlconverter-test.h  storagexmlnames-test.cpp  storagexmlnames-test.h  storagexmlreaderwriter20190203-test.cpp  storagexmlreaderwriter20190203-test.h  storagexmlupgrader-test.cpp  storagexmlupgrader-test.h
kmymoney/plugins/storage/xml/frontend/: message.cpp  message.h  opensave.cpp  opensave.h  opensave_p.h  questioner.cpp  questioner.h  saveasencrypted.cpp  saveasencrypted.h  saveasencrypted_p.h
kmymoney/plugins/storage/xml/frontend/quick/: opensave.cpp  opensave.h  opensave.qml  questioner.cpp  questioner.h  resources.qrc  saveasencrypted.cpp  saveasencrypted.h  saveasencrypted.qml
kmymoney/plugins/storage/xml/frontend/widget/: kcm.ui  opensave.cpp  opensave.h  questioner.cpp  questioner.h  saveasencrypted.cpp  saveasencrypted.h  saveasencrypted.ui
kmymoney/plugins/storage/xml/gpg/backend/: backend.cpp  backend.h  keysmodel.cpp  keysmodel.h
kmymoney/plugins/storage/xml/gpg/frontend/: keydownloader.cpp  keydownloader.h  keysselector.cpp  keysselector.h  keysselector_p.h  message.cpp  message.h  questioner.cpp  questioner.h
kmymoney/plugins/storage/xml/gpg/frontend/quick/: gpgresources.qrc  keydownloader.cpp  keydownloader.h  keysselector.cpp  keysselector.h  keysselector.qml  questioner.cpp  questioner.h  unusedkeys.qml
kmymoney/plugins/storage/xml/gpg/frontend/widget/: keydownloader.cpp  keydownloader.h  keysselector.cpp  keysselector.h  keysselector.ui  passphraseprovider.cpp  passphraseprovider.h  (+6 more)
kmymoney/plugins/views/homeview/: CMakeLists.txt  homeview.cpp  homeview.h  homeview.json.cmake  khomeview.cpp  khomeview_p.h
kmymoney/plugins/xml/tests/: CMakeLists.txt  mymoneyxmlcontenthandler-test.cpp  xmlfile20181201-test.cpp  xmlfile20181201-test.h  xmlfiletesthelper.cpp  xmlfiletesthelper.h
kmymoney/plugins/xml/tests/xmlFiles/2018-12-01/: basicFile.kmy  basicInstitution.kmy  basicPayee.kmy  hasReferenceInSchedule.kmy  overdueSchedule.kmy
(+161 files in other folders)
